"通过配置静态资源路径，来代替绝对路径的写法"

--- a/SpringBootDemoDay1/src/main/resources/templates/test/index.html
+++ b/SpringBootDemoDay1/src/main/resources/templates/test/index.html
@@ -16,6 +16,8 @@
 		<button type="submit">上传</button>
 	</form>
 	
+	<img th:src="@{${resourceLogo}}"/> <!--通过静态资源路径获取-->
+	
 	<p>==================================================================</p>
 	<h3>th:text</h3><!--text文本-->
 	<h1 th:text="${thymeleafTitle}">this is thymeleaf title</h1>
