--- a/SpringBootDemoDay1/src/main/resources/templates/test/index.html
+++ b/SpringBootDemoDay1/src/main/resources/templates/test/index.html
@@ -3,6 +3,12 @@
 	
 	<!--thymelea-->
 	
+	<h3>file downlod</h3>
+	<a href="/test/download?fileName=111.jpg">download file</a>
+	<br>
+	<p>==================================================================</p>
+	
+	
 	<h3>file upload</h3>
 	<p th:text="${message}"></p>
 	<form action="/test/file" method="post" enctype="multipart/form-data">
