--- a/SpringBootDemoDay1/src/main/resources/templates/index.html
+++ b/SpringBootDemoDay1/src/main/resources/templates/index.html
@@ -18,6 +18,10 @@
 		<!-- Custom Theme Style -->
 		<link th:href="${'/build/css/custom.min.css'}" rel="stylesheet" />
 		
+		<!-- layer -->
+		<script th:src="@{https://cdn.bootcss.com/layer/2.1/layer.js}" type="text/javascript"></script>
+		
+		
 	</head>
 	<!--组装部分 th:replace-->
 	<body class="nav-md">
