--- a/SpringBootDemoDay1/src/main/resources/templates/indexSimple.html
+++ b/SpringBootDemoDay1/src/main/resources/templates/indexSimple.html
@@ -15,33 +15,27 @@
 		<link th:href="${'/vendors/bootstrap/dist/css/bootstrap.min.css'}" rel="stylesheet" />
 		<!-- Font Awesome -->
 		<link th:href="${'/vendors/font-awesome/css/font-awesome.min.css'}" rel="stylesheet" />
+		<!-- NProgress -->
+    	<link th:href="${'/vendors/nprogress/nprogress.css'}" rel="stylesheet" />
+    	<!-- Animate.css -->
+    	<link th:href="${'/vendors/animate.css/animate.min.css'}" rel="stylesheet" />
 		<!-- Custom Theme Style -->
 		<link th:href="${'/build/css/custom.min.css'}" rel="stylesheet" />
         
+         <!-- jQuery -->
+	    <script th:src="${'/vendors/jquery/dist/jquery.min.js'}" type="text/javascript"></script>	
+        <!-- layer -->
+		<script th:src="@{https://cdn.bootcss.com/layer/2.1/layer.js}" type="text/javascript"></script>
+              
 	</head>
 	<!--组装部分 th:replace-->
-	<body>
-		<div id="wrapper">
-			<!-- body -->
-			<div class='mainBody' style="margin-top: 20px;">
-				<div th:if="${template}">  <!--如果有template属性，则将其替换掉-->
-					<div th:replace="${template}"></div>
-			    </div>
+	<body class="login">
+			<div th:if="${template}">  <!--如果有template属性，则将其替换掉-->
+				<div th:replace="${template}"></div>
 			</div>
-		</div>
 	</body>
 	
-		<!-- 引入js  th:src  引入外部网络文件用@{}符号标识 -->
-	    <!-- <script th:src="@{http://cdn.bootcss.com/jquery/1.11.1/jquery.min.js}"></script>  
-	    <script th:src="@{http://cdn.bootcss.com/bootstrap/3.3.0/js/bootstrap.min.js}"></script> -->
-	    <!-- <script th:src="${'/js/sbDemo.js'}" type="text/javascript"></script> -->	
-	    <!-- jQuery -->
-	    <script th:src="${'/vendors/jquery/dist/jquery.min.js'}" type="text/javascript"></script>	
-	    <!-- Bootstrap -->
-	    <script th:src="${'/vendors/bootstrap/dist/js/bootstrap.bundle.min.js'}" type="text/javascript"></script>
-	    <!-- Custom Theme Scripts -->
-	    <script th:src="${'/build/js/custom.min.js'}" type="text/javascript"></script>
 </html>
 
-<!--碎片组装器，它是用来将不同的碎片页面来组合起来-->
+
 
