--- a/SpringBootDemoDay1/src/main/resources/templates/account/users.html
+++ b/SpringBootDemoDay1/src/main/resources/templates/account/users.html
@@ -1,5 +1,3 @@
-<!-- jquery.dataTables -->
-<link th:href="@{http://cdn.datatables.net/1.10.20/css/jquery.dataTables.min.css}" rel="stylesheet" >
 <!-- dataTables -->
 <link th:href="${'/vendors/datatables.net-bs/css/dataTables.bootstrap.min.css'}" rel="stylesheet" />
 <!-- buttons.bootstrap -->
@@ -106,8 +104,10 @@
 		</div>
 	</div>
 </div>
-
+<!--引入页面-->
 <div th:replace="account/userAdd :: userAdd"></div>
+<div th:replace="account/userEdit :: userEdit"></div>
+
 
 <!-- jquery.dataTables -->
 <script th:src="${'/vendors/datatables.net/js/jquery.dataTables.min.js'}" type="text/javascript"></script>
@@ -130,9 +130,10 @@
 <!-- scroller -->
 <script th:src="${'/vendors/datatables.net-scroller/js/dataTables.scroller.min.js'}" type="text/javascript"></script>
 
+
 <script type="text/javascript">
 var DEFAULT_PAGE_SIZE = 5;
-
+//预加载
 $(document).ready(function() {
 	initTable(DEFAULT_PAGE_SIZE);
 	
@@ -143,7 +144,94 @@ $(document).ready(function() {
 	$("#userAddBtn").bind("click", function() {
 		insertUser();
 	});
+	
+	$("#userEditBtn").bind("click", function() {
+		updateUser();
+	});
+	
 });
+
+//删除用户
+function deleteUser(userId){
+	var msg = "确定删除么";
+	bootbox.confirm(msg,function(result){
+		if(result){
+			$.ajax({
+				url : "/api/user/" + userId,
+				type : "delete",
+				contentType: "application/json",
+				success : function (data) {
+					if (data.status == 200) {
+						initTable(DEFAULT_PAGE_SIZE);
+					} else {
+						layer.msg(data.message, {icon: 0});
+					}
+				},
+				error : function (data) {
+					layer.msg(data.responseText, {icon: 0});
+				}
+					
+			});
+		}
+	})
+	
+}
+
+//初始化编辑页面
+function initEditModal(userId) {
+	initRoles("rolesForEditPage", "roleForEditPage");
+	
+	$.ajax({
+		url : "/api/user/" + userId,
+		type : "get",
+		contentType: "application/json",
+		success : function (rs) {
+			$("#userIdForEditPage").val(rs.userId);
+			$("#userNameForEditPage").val(rs.userName);
+			$.each(rs.roles, function(i, item){
+				$("input[name='roleForEditPage'][value=" + item.roleId + "]")
+					.attr("checked","checked");
+			});
+		},
+		error : function (data) {
+			layer.alert(data.responseText, {icon: 0});
+		}
+	});
+}
+//更新数据
+function updateUser() {
+	var user = {};
+	user.userId = $("#userIdForEditPage").val();
+	user.userName = $("#userNameForEditPage").val();
+	var roles = new Array();
+	$.each($("input[name='roleForEditPage']"), function(){
+		if(this.checked){
+			var role = {};
+			role.roleId = $(this).val();
+			roles.push(role);
+		}
+	});
+	user.roles = roles;
+	
+	$.ajax({
+		url : "/api/user",
+		type : "put",
+		contentType: "application/json",
+		data : JSON.stringify(user),
+		success : function (data) {
+			if (data.status == 200) {
+				initTable(DEFAULT_PAGE_SIZE);
+			} else {
+				layer.msg(data.message, {icon: 0});
+			}
+		},
+		error : function (data) {
+			layer.msg(data.responseText, {icon: 0});
+		}
+	});
+}
+
+
 
 //添加user
 function insertUser() {
@@ -183,7 +271,7 @@ function initUserAdd() {
 	$("#passwordForAddPage").val("");
 	initRoles("rolesForAddPage", "roleForAddPage");
 }
-
+//添加role属性的checkbox，用each遍历出来
 function initRoles(rolesDiv, roleName) {
 	$("#" + rolesDiv + "").empty();
 	$.ajax({
@@ -223,7 +311,7 @@ function initTable(pageSize) {
 			var sort = data.order[0].dir;
 			var orderBy = data.columns[columIndex].name;
 			pageSize = data.length == undefined ? pageSize : data.length;
-			
+			//将包装好的分页类载入
 			var searchVo = {};
 			searchVo.currentPage = (data.start / pageSize) + 1;
 			searchVo.pageSize = pageSize;
@@ -290,9 +378,9 @@ function TData(userId, userName, password, createDate) {
 	this.password = password;
 	this.createDate = createDate;
 	this.operate = function () {
-		return "<a href='#' class='btn_editcolor' " + 
+		return "<a href='#' class='btn_editcolor' data-toggle='modal' data-target='#userEditModal'" + 
 			"onclick='initEditModal(\"" + userId + "\")'>编辑</a>&nbsp;" + 
-			"<a href='javascript:void(0);' onclick='deleteRole(\"" + userId + "\")' class='btn_editcolor'>删除</a>";
+			"<a href='javascript:void(0);' onclick='deleteUser(\"" + userId + "\")' class='btn_editcolor'>删除</a>";
 	}
 }
 
