--- a/SpringBootDemoDay1/src/main/resources/templates/index.html
+++ b/SpringBootDemoDay1/src/main/resources/templates/index.html
@@ -25,7 +25,8 @@
 	    <script th:src="${'/vendors/bootstrap/dist/js/bootstrap.bundle.min.js'}" type="text/javascript"></script>
 		<!-- layer -->
 		<script th:src="@{https://cdn.bootcss.com/layer/2.1/layer.js}" type="text/javascript"></script>
-		
+		<!--确认删除框-->
+		<script th:src="${'/build/js/bootbox.js'}" type="text/javascript"></script>
 		
 	</head>
 	<!--组装部分 th:replace-->
