--- a/SpringBootDemoDay1/src/main/resources/templates/fragments/sideBar.html
+++ b/SpringBootDemoDay1/src/main/resources/templates/fragments/sideBar.html
@@ -34,8 +34,8 @@
 						class="fa fa-chevron-down"></span></a>
 					<ul class="nav child_menu">
 						<li><a href="/account/users">user</a></li>
-						<li><a href="index2.html">role</a></li>
-						<li><a href="index3.html">resource</a></li>
+						<li><a href="/account/roles">role</a></li>
+						<li><a href="/account/resources">resource</a></li>
 					</ul></li>
 			</ul>
 			
