--- a/SpringBootDemoDay1/src/main/resources/templates/account/register.html
+++ b/SpringBootDemoDay1/src/main/resources/templates/account/register.html
@@ -51,7 +51,7 @@
 		user.userName = $("[name='userName']").val();
 		user.password = $("[name='password']").val();
 		$.ajax({
-			url: "/account/user",
+			url: "/api/user",
 			type: "post",
 			contentType: "application/json",
 			data: JSON.stringify(user),
